--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,23 +1,32 @@
-@media (max-width: 425px) {
+@media (max-width: 430px) {
     body {
-        background-image: url(../images/bg-mobile.svg);
-        background-position-x: -0.5%;
-        background-position-y: -110px;
+        background: url(../images/bg-mobile.svg) no-repeat var(--cor-primaria);
+        background-size: contain;
     }
 
     .container {
+        display: grid;
         grid-template-areas: "header"
         "sections"
         "about"
         "footer";
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(3, 1fr);
+        grid-template-rows: repeat(4, auto);
     }
 
     .header {
-        grid-area: header;
         display: flex;
-        margin: 40PX 10PX;
+        height: 40px;
+        margin: 40px 40px  0px;
+    }
+
+    .header .logo {
+        justify-content: flex-start;
+        text-align: left;
+    }
+
+    .header .logo img {
+        width: 50%;
     }
 
     .sections {
@@ -27,12 +36,12 @@
     }
 
     .sections .section {
-        width: 530px;
+        width: 350px;
         text-align: center;
     }
 
     .sections .section img {
-        width: 90%;
+        width: 100%;
     }
 
     .about {
@@ -40,21 +49,40 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        margin: 0;
     }
 
     .about .about-info h1 {
-        font-size: 2.5rem;
+        font-size: 1.6rem;
         text-align: center;
+        padding-bottom: 20px;
     }
 
     .about .about-info {
         text-align: center;
-        font-size: 1.8rem;
-        padding: 18px 30px;
+        font-size: 1rem;
+        padding-bottom: 18px;
+        width: 300px;
     }
 
     .about .btn-section {
-        
+        margin: 0;
+        font-size: 1rem;
+        padding: 15px 100px;
     }
 
+    .footer .footer-icon {
+        margin-top: 70px;
+    }
+
+}
+
+@media (max-width: 1440px) {
+    .header {
+        grid-area: header;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 1fr 1fr;
+        justify-items: flex-start;
+    }
 }
