--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,4 +1,4 @@
-@media (max-width: 430px) {
+@media (min-width: 430px) {
     body {
         background: url(../images/bg-mobile.svg) no-repeat var(--cor-primaria);
         background-size: contain;
@@ -77,7 +77,7 @@
 
 }
 
-@media (max-width: 1440px) {
+@media (min-width: 1440px) {
     .header {
         grid-area: header;
         display: grid;
