--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -10,23 +10,16 @@
         "sections"
         "about"
         "footer";
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(4, auto);
-    }
-
-    .header {
-        display: flex;
-        height: 40px;
-        margin: 40px 40px  0px;
     }
 
     .header .logo {
-        justify-content: flex-start;
-        text-align: left;
+        margin: 0;
+        padding: 0;
     }
 
     .header .logo img {
-        width: 50%;
+        width: 65%;
+        padding: 40px 35px
     }
 
     .sections {
@@ -36,7 +29,7 @@
     }
 
     .sections .section {
-        width: 350px;
+        width: 320px;
         text-align: center;
     }
 
@@ -55,7 +48,7 @@
     .about .about-info h1 {
         font-size: 1.6rem;
         text-align: center;
-        padding-bottom: 20px;
+        padding: 50px 0 20px;
     }
 
     .about .about-info {
@@ -71,18 +64,25 @@
         padding: 15px 100px;
     }
 
+    .footer {
+        justify-items: center;
+        margin: 50px;
+    }
+
     .footer .footer-icon {
-        margin-top: 70px;
+        
     }
 
 }
 
 @media (max-width: 1440px) {
-    .header {
-        grid-area: header;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: 1fr 1fr;
-        justify-items: flex-start;
+
+    .header .logo {
+        margin: 0;
+        padding: 0;
+    }
+
+    .header .logo img {
+        padding: 40px 10px
     }
 }
