--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Poppins", "Open Sans", serif;
-    background: url(../images/bg-desktop.svg) center no-repeat var(--cor-primaria);
-    background-size: cover;
+    background: url(../images/bg-desktop.svg) no-repeat var(--cor-primaria);
+    background-size: contain;
 }
 
 .container {
@@ -9,7 +9,7 @@ body {
     grid-template-areas: "header ."
                         "sections about"
                         ". footer";
-    grid-template-columns: repeat(2, auto);
+    grid-template-columns: repeat(auto-fit,minmax(200px, 1fr));
     grid-template-rows: repeat(3, 1fr);
     height: 100vh;
 }
@@ -18,20 +18,18 @@ body {
 
 .header {
     grid-area: header;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr 1fr;
-    justify-items: flex-end;
+    display: flex;
+    justify-content: left;
+    align-items: end;
 }
 
 .header .logo {
-    grid-row: 2;
-    justify-content: flex-end;
-    text-align: end;
+    padding-left: 460px;
+    padding-bottom: 60px;
 }
 
 .header .logo img {
-    width: 80%;
+    padding-left: 100px;
 }
 
 /* SECTION */
@@ -39,6 +37,16 @@ body {
 .sections {
     grid-area: sections;
     justify-items: end;
+    align-content: center;
+}
+
+.sections .section {
+    display: flex;
+    justify-content: center;
+}
+
+.sections .section img {
+    
 }
 
 /* ABOUT */
@@ -80,8 +88,7 @@ body {
 
 .footer {
     grid-area: footer;
-    display: flex;
-    justify-content: center;
+    margin-left: 350px;
 }
 
 .footer .footer-icon .fa-brands {
